--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'io.fabric'
-//
-//repositories {
-//    maven { url 'https://maven.fabric.io/public' }
-//}
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 android {
     compileSdkVersion 25
@@ -51,10 +51,10 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
-//    compile 'com.google.firebase:firebase-core:9.6.1'
-//    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
-//        transitive = true;
-//    }
+    compile 'com.google.firebase:firebase-core:10.2.6'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
 
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -63,4 +63,5 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 }
-//apply plugin: 'com.google.gms.google-services'
+
+apply plugin: 'com.google.gms.google-services'
