--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
         mavenCentral()
 
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -21,6 +25,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
